WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148900
Fix JSDollarVMPrototype after
r189160
https://bugs.webkit.org/show_bug.cgi?id=148900
Summary
Fix JSDollarVMPrototype after r189160
Mark Lam
Reported
2015-09-05 10:04:24 PDT
JSDollarVMPrototype needs to be updated to match
http://trac.webkit.org/changeset/189160
i.e. remove the JSC::Function bit in its property attributes.
Attachments
the fix.
(1.64 KB, patch)
2015-09-05 10:08 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2015-09-05 10:08:44 PDT
Created
attachment 260691
[details]
the fix.
Michael Saboff
Comment 2
2015-09-05 22:44:19 PDT
Comment on
attachment 260691
[details]
the fix. r=me.
WebKit Commit Bot
Comment 3
2015-09-05 23:30:52 PDT
Comment on
attachment 260691
[details]
the fix. Clearing flags on attachment: 260691 Committed
r189443
: <
http://trac.webkit.org/changeset/189443
>
WebKit Commit Bot
Comment 4
2015-09-05 23:30:56 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5
2015-09-06 13:41:33 PDT
Why no regression test?
Mark Lam
Comment 6
2015-09-06 14:02:26 PDT
(In reply to
comment #5
)
> Why no regression test?
http://trac.webkit.org/changeset/189160
makes it such that this is simply the new way (not using the JSC::Function attribute) of calling putDirectNativeFunction().
r189160
changed every other place that uses putDirectNativeFunction() but missed this one case. I'm just following up on the missed case. The original patch did not think that this change warranted a regression test, and I applied the same standard for this patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug