Fix JSDollarVMPrototype after r189160. https://bugs.webkit.org/show_bug.cgi?id=148900

Reviewed by Michael Saboff.

JSDollarVMPrototype needs to be updated to match http://trac.webkit.org/changeset/189160 i.e.
remove the use of JSC::Function bit in its property attributes.

* tools/JSDollarVMPrototype.cpp:
(JSC::JSDollarVMPrototype::finishCreation):


Canonical link: https://commits.webkit.org/166997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189443 268f45cc-cd09-0410-ab3c-d52691b4dbfc